--- a/UsedItemDonationSystem/add-item.html
+++ b/UsedItemDonationSystem/add-item.html
@@ -33,7 +33,7 @@
     <body>
         <header>
             <div class="header">
-                    <a href="index.html" class="logo flex">
+                    <a href="index.php" class="logo flex">
                         <img src="icon/soy.png" class="soylogo" alt="Daizu Foundation">
                         <div>Daizu<br/>Foundation</div>
                     </a>
