--- a/UsedItemDonationSystem/dashboard.html
+++ b/UsedItemDonationSystem/dashboard.html
@@ -17,7 +17,7 @@
         }
         
         .container{
-            background: #FFFFFF;
+            background: transparent;
             padding: 15px 9%;
             padding-bottom: 100px;
         }
@@ -91,7 +91,7 @@
         }
     </style>
 </head>
-<body>
+<body id="wrapper">
     <header>
         <div class="header">
                 <a href="index.php" class="logo flex">
